RESOLVED FIXED293468
css/css-view-transitions/paint-holding-in-iframe.html fails due to iframe not being composited
https://bugs.webkit.org/show_bug.cgi?id=293468
Summary css/css-view-transitions/paint-holding-in-iframe.html fails due to iframe not...
Matt Woodrow
Reported 2025-05-22 19:02:36 PDT
Paint holding (suppression) requires a compositing layer for it to be applied, and frames don't necessarily have one.
Attachments
Matt Woodrow
Comment 1 2025-05-22 19:07:53 PDT
EWS
Comment 2 2025-05-27 18:30:30 PDT
Committed 295482@main (3ee3021ece1b): <https://commits.webkit.org/295482@main> Reviewed commits have been landed. Closing PR #45811 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-05-27 18:39:18 PDT
Note You need to log in before you can comment on or make changes to this bug.