Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -5085,23 +5085,24 @@ String WebPage::rootFrameOriginString()
     return makeString(rootFrameURL.protocol(), ':');
 }
 
-void WebPage::didUpdateRendering()
+void WebPage::didUpdateRendering(OptionSet<DidUpdateRenderingFlags> flags)
 {
-    didPaintLayers();
-
-    if (m_didUpdateRenderingAfterCommittingLoad)
-        return;
-
-    m_didUpdateRenderingAfterCommittingLoad = true;
-    send(Messages::WebPageProxy::DidUpdateRenderingAfterCommittingLoad());
-}
-
-void WebPage::didPaintLayers()
-{
+    if (flags & DidUpdateRenderingFlags::PaintedLayers) {
 #if ENABLE(GPU_PROCESS)
-    if (RefPtr proxy = m_remoteRenderingBackendProxy)
-        proxy->didPaintLayers();
+        if (RefPtr proxy = m_remoteRenderingBackendProxy)
+            proxy->didPaintLayers();
 #endif
+    }
+
+    if (flags & DidUpdateRenderingFlags::NotifyUIProcess) {
+        if (m_didUpdateRenderingAfterCommittingLoad)
+            return;
+
+        m_didUpdateRenderingAfterCommittingLoad = true;
+        send(Messages::WebPageProxy::DidUpdateRenderingAfterCommittingLoad());
+    }
+
+    protectedCorePage()->didUpdateRendering();
 }
 
 bool WebPage::shouldTriggerRenderingUpdate(unsigned rescheduledRenderingUpdateCount) const
